--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes App</title>
+    <title>Short Notes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-
-<body>
+<style>
+    h4,h6{
+        display: inline-block;
+    }
+    h6{
+        float:right;
+    } 
+</style>
+<body style="background: linear-gradient(to right, rgb(39, 124, 236), rgb(59, 98, 225));">
     <!--go to getbootstrap.com->documentation then copy CSS and paste below the title-->
     <!--then copy SCRIPT file and paste it into bode tag-->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Magic Notes</a>
+            <a class="navbar-brand" href="#">Short Notes</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -26,6 +33,9 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" aria-current="page" href="trash.html">Trash</a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -38,23 +48,33 @@
     <!--div.container.my-3 means y-axis got 3 margins from up-->
     <!--if a class contains mx-2 means x has 2 margins ans my-3 means y has 3 margins -->
     <div class="container my-4">
-        <h1>Welcome to Magic Notes</h1>
-        
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Add a Note + </h5>
+        <h1 style="color:white;">Welcome to Short Notes</h1>
+        <div class="card" style="border-radius: 45px;">
+            <div class="card-body" style="padding:32px;border:5px solid white;border-radius:45px;">
+                <h4 class="card-title">Add Notes + </h4>
+                <h6 id="time"></h6>
+                <script>
+                    function displayTime() {
+                        time = new Date().toLocaleDateString('en-US',{year:"numeric",day:"numeric",month:"short",hour:"numeric",minute:"numeric",second:"numeric",hour12:true});
+                        document.getElementById('time').innerHTML="Now : "+time;
+                    }
+                    setInterval(displayTime,1000);
+                </script>
                 <!--go to forms to copy text area -->
                 <div class="mb-3">
-                    <textarea class="form-control" id="addTxt" rows="3"></textarea>
+                    <input type="text" class="form-control" id="addTitle" placeholder="Add title ..">
                 </div>
-                <button class="btn btn-primary" id="addBtn"><b>Add Note</b></button>
+                <div class="mb-3">
+                    <textarea class="form-control" id="addTxt" rows="3" placeholder="Write something .."></textarea>
+                </div>
+                <button class="btn" style="color:white;background-color: rgb(4, 166, 241);" id="addBtn"><b>Add Note</b></button>
             </div>
         </div>
-        <hr>
-        <h2>Your Notes</h2>
-        <hr>
+        <br>
+        <h2 style="color: white;">Your Notes</h2>
+        <div class="card" style="border-radius: 45px;"></div><br>
         <!--div#notes.row.container-fluid to occupies all space on webpage under that container-->
-        <div id="notes" class="row container-fluid"></div>
+        <div id="notes" class="row container-fluid"></div><br>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
